<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Card.NewCardActivity"
        android:background="@color/whitePrimary">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="#CCFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:translationZ="@dimen/activity_horizontal_margin"
            android:visibility="gone">

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@color/redPrimary"/>

            <TextView
                    android:id="@+id/pbText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/redPrimary"
                    android:text="@string/upload_media_progress_bar"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                    <androidx.appcompat.widget.Toolbar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/colorPrimary"
                            android:theme="?attr/actionBarTheme"
                            android:minHeight="?attr/actionBarSize"
                            tools:layout_editor_absoluteY="0dp"
                            android:backgroundTint="@color/redPrimary"
                            tools:layout_editor_absoluteX="8dp"
                            android:id="@+id/toolbar"
                            app:theme="@style/ToolbarTheme">
                        <Button
                                android:layout_gravity="end"
                                android:text="@string/new_card_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="?android:attr/borderlessButtonStyle"
                                tools:layout_editor_absoluteX="322dp"
                                android:id="@+id/publish_card"
                                android:background="@color/redPrimary"
                                android:textColor="@color/whitePrimary"/>
                    </androidx.appcompat.widget.Toolbar>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp">
                    <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/image_profile_description"
                            android:src="@drawable/default_avatar"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp">
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:id="@+id/user"
                                android:textSize="16sp"
                                android:textStyle="bold"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:id="@+id/activity_title"
                                android:text="@string/new_card_title"
                                android:textSize="14sp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/container"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:padding="20dp">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/new_card_subtitle"
                            android:paddingBottom="5dp"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:id="@+id/title_text"
                            android:background="#fff"
                            android:hint="@string/write_card_title_hint"
                            android:padding="10dp"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:id="@+id/desc_text"
                            android:background="#fff"
                            android:hint="@string/write_card_description_hint"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="100dp"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/container_categories"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:padding="20dp">
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:orientation="horizontal"
                                android:layout_height="match_parent">
                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/categories_section_title"
                                        android:gravity="start"
                                        android:layout_gravity="center"/>
                                <Space
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"/>
                                <Button
                                            android:fontFamily="sans-serif"
                                            android:id="@+id/add_categories"
                                            android:text="@string/categories_section_button"
                                            android:textColor="@color/redPrimary"
                                            android:textAllCaps="false"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:layout_gravity="center"
                                            style="?android:attr/borderlessButtonStyle"
                                            android:textStyle="normal"
                                            android:backgroundTint="@color/whitePrimary"/>
                        </LinearLayout>
                        <com.google.android.material.chip.ChipGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:chipSpacingVertical="5dp"
                                android:id="@+id/added_categories">
                        </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:id="@+id/container_link">
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:orientation="horizontal"
                                android:layout_height="match_parent">
                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="start"
                                        android:text="@string/link_section_title"
                                        android:layout_gravity="center"/>
                                <Space
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"/>
                                <Button
                                        android:fontFamily="sans-serif"
                                        android:textColor="@color/redPrimary"
                                        android:textAllCaps="false"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:layout_gravity="center"
                                        style="?android:attr/borderlessButtonStyle"
                                        android:textStyle="normal"
                                        android:backgroundTint="@color/whitePrimary"
                                        android:id="@+id/link_btn"
                                        android:text="@string/link_section_button"/>
                        </LinearLayout>
                        <LinearLayout android:layout_width="match_parent"
                                      android:layout_height="match_parent"
                                      android:orientation="vertical"
                                      android:id="@+id/added_link">
                        </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/container_multimedia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="@string/multimedia_section_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:layout_gravity="center"/>
                        <Space
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"/>
                        <Button
                                android:fontFamily="sans-serif"
                                android:text="@string/multimedia_section_button"
                                android:textColor="@color/redPrimary"
                                android:textAllCaps="false"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_gravity="center"
                                style="?android:attr/borderlessButtonStyle"
                                android:textStyle="normal"
                                android:backgroundTint="@color/whitePrimary"
                                android:id="@+id/multimedia_btn"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:id="@+id/added_multimedia">
                            <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="horizontal"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>