...
                    android:layout_marginBottom="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                    android:id="@+id/info_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/txt_country"/>

                <LinearLayout
                        android:id="@+id/info_buttons_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:background="#FFF"
                        android:paddingBottom="10dp">
...
                                android:layout_margin="5dp"
                                android:textColor="#FFF"
                                android:text="@string/edit_button"/>
                        <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/btn_signout"
                                android:layout_margin="5dp"
                                style="?android:attr/borderlessButtonStyle"
                                android:backgroundTint="@color/blackPrimary"
                                android:textColor="#FFF"
                                android:text="@string/sign_out_button"/>
                </LinearLayout>
...
